# windshape

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  index.html  package.xml  setup.py
config/: intel.yaml  px4.yaml  vrpn.yaml  windshape.yaml
doc/: Doxyfile
doc/html/: _combo_dialog_8py.html  _combo_input_8py_source.html  _control_parameters_8py_source.html  (+106 more)
docs/: Doxyfile  ____init_____8py.html  ____init_____8py_source.html  _attitude_widget_8py.html  _attitude_widget_8py_source.html  _combo_dialog_8py.html  _combo_dialog_8py_source.html  _combo_input_8py.html  _combo_input_8py_source.html  _commander_8py.html  _commander_8py_source.html  _control_panel_8py_source.html  _control_parameters_8py.html  _control_parameters_8py_source.html  _controller_8py_source.html  _drone_8py.html  _drone_8py_source.html  _drone_attitude_8py.html  _drone_attitude_8py_source.html  _drone_pose_8py_source.html  _edit_input_8py.html  _edit_input_8py_source.html  _fans_array_8py.html  _fans_array_8py_source.html  _info_widget_8py.html  _info_widget_8py_source.html  _l_i_c_e_n_s_e_8md.html  _low_pass_filter_8py.html  _low_pass_filter_8py_source.html  _m_a_v_r_o_s_client_8py_source.html  _m_a_v_r_o_s_listener_8py.html  _m_a_v_r_o_s_listener_8py_source.html  _m_a_v_r_o_s_publisher_8py_source.html  _module_8py.html  _module_8py_source.html  _moving_average_8py.html  _moving_average_8py_source.html  _my_subscriber_8py.html  _my_subscriber_8py_source.html  _p_i_d_controller_8py.html  (+625 more)
launch/: control.launch
misc/: README.md  stepLP.m
nodes/: gui  test  windshape_node
scripts/: replay
(+796 files in other folders)
