<package format="2">
	<name>windshape</name>
	<version>1.0.0</version>
	
	<description>
		Drone and WindShape fans array control.
	</description>
	
	<maintainer email="adrien.fleury@epfl.ch">Adrien Fleury</maintainer>
	<author email="adrien.fleury@epfl.ch">Adrien Fleury</author>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>rospy</depend>
	<doc_depend>doxygen</doc_depend>
</package>
